updated Jenkinsfile with sonarQube scanner corrected 8